--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,29 @@
 {
-  "extends": [
-    "prettier"
-  ],
+  "root": true,
+  "globals": {},
+  "env": {
+    "browser": true,
+    "node": true
+  },
   "plugins": [
-    "prettier"
-  ]
+    "import"
+  ],
+  "extends": [
+    "airbnb-base"
+  ],
+  "rules": {
+    "no-underscore-dangle": "off",
+    "func-names": [
+      "warn",
+      "as-needed"
+    ],
+    "quote-props": [
+      "warn",
+      "as-needed",
+      {
+        "keywords": true,
+        "unnecessary": false
+      }
+    ]
+  }
 }
