--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.12.7",
+    "@babel/core": "^7.12.7",
+    "@babel/node": "^7.12.6",
+    "@babel/preset-env": "^7.12.7",
     "gh-pages": "^3.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -22,6 +26,7 @@
   },
   "dependencies": {
     "eslint": "^7.12.1",
+    "gulp-postcss": "^9.0.0",
     "gulp-purifycss": "^0.2.0",
     "gulp-sass": "^4.1.0",
     "stylelint-config-sass-guidelines": "^7.1.0"
