--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@babel/core": "^7.12.7",
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.7",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-react": "^7.21.5",
     "gh-pages": "^3.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -21,14 +24,11 @@
     "gulp-imagemin": "^7.1.0",
     "node-sass": "^5.0.0",
     "prettier": "2.1.2",
-    "purify-css": "^1.2.5",
     "stylelint": "^13.7.2"
   },
   "dependencies": {
-    "eslint": "^7.12.1",
-    "gulp-postcss": "^9.0.0",
-    "gulp-purifycss": "^0.2.0",
     "gulp-sass": "^4.1.0",
+    "postcss": "^8.1.10",
     "stylelint-config-sass-guidelines": "^7.1.0"
   }
 }
